# igg_image_h3

./: CMakeLists.txt
data/: pbmlib.ascii-new.ppm
src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
src/igg_image/io_strategies/: CMakeLists.txt  ppm_strategy.cpp  ppm_strategy.h
